--- a/src/app/room/room.component.css
+++ b/src/app/room/room.component.css
@@ -18,12 +18,27 @@
   border-right: 1px #ddd solid;
 }
 
+#container-visualiser {
+  display: flex;
+  justify-content: left;
+}
+
 #visualiser {
   position: relative;
   width: 702px;
   height: 702px;
-  float: left;
-  margin: 0px 90px;
+  margin-left: 40px;
+  margin-top: 20px;
+}
+
+#zoomRange {
+  position: relative;
+  display: block;
+  width:50px;
+  height:700px;
+  margin-top: 75px;
+  display: flex;
+  align-items: start;
 }
 
 * {
@@ -82,7 +97,7 @@ input[type=number]::-webkit-outer-spin-button {
   padding: 20px 20px 20px 20px;
   border-bottom: 1px solid #ddd;
   overflow-y: scroll;
-  max-height: 330px;
+  max-height: 230px;
 }
 
 .horizontal-width {
@@ -155,7 +170,6 @@ h2 {
   align-items: center;
   font-size: 1.4em;
   font-weight: bold;
-
   padding: 30px;
 }
 
@@ -194,12 +208,12 @@ h2 {
   justify-content: space-around;
 }
 
-.contentPopup #right{
+.contentPopup .right{
   float: left;
   width: 100px;
   border-right: 1px solid #ddd;
 }
-.contentPopup #left{
+.contentPopup .left{
   float: left;
   width:100px;
 }
@@ -217,12 +231,29 @@ h2 {
 }
 
 #workspaceHeader #headerRight button{
-  width: 90px;
+  width: 120px;
   height: 30px;
+  font-size: 16px;
+  font-family: "Segoe UI Light";
+  font-weight: 500;
+  letter-spacing: 1px;
   background-color: white;
-  border: 2px solid #999;
+  border: 0;
+  box-shadow: 0px 0px 8px #777;
 }
 
 #linkedicon {
   margin-top: 35px;
 }
+
+input[type=range][orient=vertical] {
+  margin-left: 20px;
+  -webkit-appearance: slider-vertical;
+  width: 2px;
+  height: 200px;
+  cursor: pointer;
+}
+
+
+
+
