--- a/src/app/group-table/group-table.component.html
+++ b/src/app/group-table/group-table.component.html
@@ -1,35 +1,30 @@
 <div class="container text-center mt-4">
-  <label style="float: left;" [ngStyle]="{'display':this.TheStatus ? 'none' : 'block' }">Klicken Sie auf die Zeilen, um die Eigenschaften zu zuweisen.</label>
   <table class="table table-striped table-hover">
     <thead  class="table-dark">
     <tr>
       <th>Nr</th>
       <th>Vorname</th>
       <th>Nachname</th>
-      <th *ngIf="this.TheStatus">Löschen</th>
+      <th >Löschen</th>
     </tr>
     </thead>
     <tbody>
 
-    <tr *ngFor="let group of listOfContacts;  let i = index" (click)=" !this.TheStatus? openModal(i+1,group.Vorname,group.Nachname):''">
+    <tr *ngFor="let group of listOfContacts;  let i = index" >
 
       <td>
         {{i+1}}
       </td>
 
       <td >
-        <input autocomplete="Firstname" (blur)="updateList(i, 'Vorname', $event)" [ngStyle]="{'cursor':this.TheStatus ? 'text' : 'pointer' }" placeholder="Vorname eintragen" value="{{group.Vorname}}" style="  text-align:center; outline:none;width: 100%;height: 100%; border:none; background:none" [readOnly]="!this.TheStatus" />
+        <input autocomplete="Firstname" (blur)="updateList(i, 'Vorname', $event)"  placeholder="Vorname eintragen" value="{{group.Vorname}}" style="  text-align:center; outline:none;width: 100%;height: 100%; border:none; background:none"  />
       </td>
 
       <td>
-        <input autocomplete="Lastname" (blur)="updateList(i, 'Nachname', $event)" [ngStyle]="{'cursor':this.TheStatus ? 'text' : 'pointer' }" placeholder="Nachname eintragen" value="{{group.Nachname}}" style="text-align:center; outline:none;width: 100%;height: 100%; border: none; background:none" [readOnly]="!this.TheStatus" />
-        <svg [ngStyle]="{'display':this.TheStatus ? 'none' : 'initial' }" style="float: right; position: absolute; margin: 5px -29px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-          <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-          <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-        </svg>
+        <input autocomplete="Lastname" (blur)="updateList(i, 'Nachname', $event)"  placeholder="Nachname eintragen" value="{{group.Nachname}}" style="text-align:center; outline:none;width: 100%;height: 100%; border: none; background:none"  />
       </td>
 
-      <td *ngIf="this.TheStatus">
+      <td >
         <svg (click)="delete(i)" style="cursor: pointer" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
           <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
           <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
@@ -37,7 +32,7 @@
       </td>
     </tr>
 
-    <td *ngIf="this.TheStatus" colspan="4" style="border-bottom: none">
+    <td  colspan="4" style="border-bottom: none">
       <svg  style="cursor: pointer; float: right" (click)="addField()" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
         <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
         <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
@@ -46,97 +41,10 @@
     </tbody>
   </table>
   <div class="btn-group mr-2" style="float: right">
-    <button  type="button" class="btn btn-outline-dark "  (click)="confirmList()" [ngStyle]="{'display':this.TheStatus ? 'block' : 'none' }">Weiter</button>
-  </div>
-  <div class="btn-group mr-2"  >
-    <button  type="button" class="btn btn-outline-dark" (click)="exportDialogBox()" [ngStyle]="{'display':!this.TheStatus ? 'block' : 'none' }">Exportieren</button>
-  </div>
-  <div class="btn-group mr-2" style="float: right">
-    <button  type="button" class="btn btn-outline-dark"  (click)="saveList()" [ngStyle]="{'display':!this.TheStatus ? 'block' : 'none' }" >Bestätigen</button>
+    <button  type="button" class="btn btn-outline-dark "  (click)="confirmList()" >Weiter</button>
   </div>
   <div class="btn-group mr-2"style="float: left">
-    <button  type="button" class="btn btn-outline-dark "  (click)="toSlider()">Zurück</button>
-  </div>
-</div>
-
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Eigenschften hinzufügen</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="closeModal()">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="container">
-          <div class="row">
-            <div class="col p-1 mb-2 bg-secondary text-white" style="text-align: center">Nr</div>
-            <div class="col p-1" style="text-align: center">{{index}}</div>
-            <div class="w-100"></div>
-            <div class="col p-1 mb-2 bg-secondary text-white" style="text-align: center">Vor- und Nachname</div>
-            <div class="col p-1" style="text-align: center">{{firstName}} {{lastName}}</div>
-            <div class="w-100"></div>
-            <div class="col p-1 mb-2 bg-secondary text-white" style="text-align: center">Eigenschften</div>
-          </div>
-          <div class="row">
-            <div class="form-check">
-              <input (change)="regulateProperties('frontOfTheRoom')"  class="form-check-input" type="checkbox" value="" id="frontOfTheRoom">
-              <label class="form-check-label" for="frontOfTheRoom">
-                Vorne im Raum
-              </label>
-            </div>
-            <div class="form-check">
-              <input (change)="regulateProperties('backOfTheRoom')" class="form-check-input" type="checkbox" value="" id="backOfTheRoom">
-              <label class="form-check-label" for="backOfTheRoom">
-                Hinten im Raum
-              </label>
-            </div>
-            <div class="form-check">
-              <input (change)="regulateProperties('besideWindow')" class="form-check-input" type="checkbox" value="" id="besideWindow">
-              <label class="form-check-label" for="besideWindow">
-                Fensternähe
-              </label>
-            </div>
-            <div class="form-check">
-              <input (change)="regulateProperties('besideDoor')" class="form-check-input" type="checkbox" value="" id="besideDoor" >
-              <label class="form-check-label" for="besideDoor">
-                Türnähe
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="besideBoard" >
-              <label class="form-check-label" for="besideBoard">
-                Tafelnähe
-              </label>
-            </div>
-            <div class="form-check">
-              <input (change)="regulateProperties('inFront')" class="form-check-input" type="checkbox" value="" id="inFront" >
-              <label class="form-check-label" for="inFront">
-                Frontal
-              </label>
-            </div>
-            <label class="form-check-label" style="padding-left:0;">
-              darf nicht neben
-              <div class="container containerProperties" style="float: right">
-                <div *ngFor="let group of neighborList;  let i = index" class="form-check">
-                  <input class="form-check-input" type="checkbox" value="" id="checkbox{{firstName}}{{lastName}}{{i}}" >
-                  <label class="form-check-label" for="checkbox{{firstName}}{{lastName}}{{i}}">
-                    {{group.Vorname}} {{group.Nachname}}
-                  </label>
-                </div>
-              </div>
-            </label>
-          </div>
-        </div>
-      </div>
-      <div  class="modal-footer">
-        <button  type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Schließen</button>
-        <button type="button" class="btn btn-outline-dark" (click)="saveProperties()">Speichern</button>
-      </div>
-    </div>
+    <button  type="button" class="btn btn-outline-dark "  (click)="toSlider()">Abrechen</button>
   </div>
 </div>
 
@@ -162,4 +70,4 @@
     </div>
   </div>
 </div>
-<app-export-csv></app-export-csv>
+
