--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -6,7 +6,7 @@
       <button type="button" (click)="removeGruppe()" class="btn btn-danger bg-danger btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isDataExist()}" title="Delete">delete</button>
     </div>
     <div class="btn-group">
-      <button type="button" routerLink="/room" class="w-100 btn btn-primary mb-3 btn-lg btn-block" >Raum erstellen</button>
+      <button type="button" id="roomBtn"  routerLink="/room" class="w-100 btn btn-primary mb-3 btn-lg btn-block" >Raum erstellen</button>
       <button type="button" disabled class="material-icons md-48 btn btn-secondary mb-3 btn-lg btn-block" (click)="ImportBox()" title="Import">file_open</button>
     </div>
     <div class="btn-group">
