--- a/src/app/room/room.component.css
+++ b/src/app/room/room.component.css
@@ -18,17 +18,19 @@
   border-right: 1px #ddd solid;
 }
 
+
 #container-visualiser {
   display: flex;
   justify-content: left;
 }
+
 
 #visualiser {
   position: relative;
   width: 702px;
   height: 702px;
   margin-left: 40px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 #zoomRange {
@@ -37,8 +39,9 @@
   width:50px;
   height:700px;
   margin-top: 75px;
+  margin-left: 20px;
   display: flex;
-  align-items: start;
+  flex-direction: column;
 }
 
 * {
@@ -154,12 +157,13 @@ h2 {
 }
 
 .popupForm {
-  margin-top: 10%;
+  margin-top: 6%;
   box-shadow: 5px 5px 10px #ccc;
   border-radius: 5px;
   background-color: #fff;
   z-index: 10;
   position: absolute;
+  width: 650px;
 }
 
 .headerPopup {
@@ -177,6 +181,14 @@ h2 {
   padding: 30px 0px;
   font-size: 1em;
   padding: 30px;
+}
+
+.moreinfosPopup {
+  font-size: 13px;
+  color: #777;
+  font-weight: bold;
+  font-family: "Segoe UI Light";
+  padding: 20px;
 }
 
 .popUpActions {
@@ -222,6 +234,8 @@ h2 {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: 50px;
 }
 
 #workspaceHeader #headerRight {
@@ -247,13 +261,19 @@ h2 {
 }
 
 input[type=range][orient=vertical] {
-  margin-left: 20px;
   -webkit-appearance: slider-vertical;
   width: 2px;
   height: 200px;
   cursor: pointer;
+  margin-left: 8px;
 }
 
+hr{
 
+  border:         none;
+  border-left:    1px solid hsla(200, 10%, 50%,100);
+  height:         100px;
+  width:          1px;
+}
 
 
