--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -121,6 +121,41 @@
   </div>
 
 
+  <div *ngIf="isToSaveRoom" class="popupForm">
+    <div class="headerPopup">
+      Hier sind Details ihres Raums
+    </div>
+    <div class="contentPopup">
+
+
+        <div *ngFor="let i of elementsNumber">
+          <label>{{i.typ}}:&nbsp;</label><label>{{i.number}}&nbsp;</label>
+        </div>
+      <hr>
+      &nbsp;&nbsp;&nbsp;
+      <div class="">
+        <div *ngFor="let el of roomElements">
+          <label>Objeckt:&nbsp;</label><label><strong>{{el.element}}&nbsp;</strong></label>
+          <label>Typ:&nbsp;</label><label><strong>{{el.elementtyp}}&nbsp;</strong></label>
+          <label>X:&nbsp;</label><label><strong>{{el.x}}&nbsp;</strong></label>
+          <label>Y:&nbsp;</label><label><strong>{{el.y}}&nbsp;</strong></label>
+          <label>Rotation:&nbsp;</label><label><strong>{{el.degRotation}}&nbsp;</strong></label>
+
+        </div>
+      </div>
+    </div>
+    <div class="moreinfosPopup">
+      Wenn Sie mit diesem Raum weitermachen wollen, clicken Sie auf Bestätigen.
+      Damit werden Sie zum Hauptmenü geführt
+      und keine Änderungen auf dem Raum mehr zum Anspruch nehmen können.<br>
+    </div>
+    <div class="popUpActions">
+      <button (click)="isToSaveRoom = false">Abbrechen</button>
+      <button (click)="isToSaveRoom = false; saveRoom();">Bestätigen</button>
+    </div>
+  </div>
+
+
 
 </div>
 
@@ -290,16 +325,20 @@
         <button class="btn" id="btn3" (click)="currentRoomId = 3; updateVisualisation(standardRooms[currentRoomId].width,standardRooms[currentRoomId].height)">Leer</button>
       </div>
       <div id="headerLeft">
-        <span (click)="savePdf()" class="material-icons p-3">picture_as_pdf</span>
-        <span (click)="reset()" class="material-icons p-3">restart_alt</span>
+        <span (click)="savePdf()" class="material-icons p-1">picture_as_pdf</span>
+        <span (click)="reset()" class="material-icons p-1">restart_alt</span>
+        <span (click)="isToSaveRoom = true; makeRoomDetailsReady();" class="material-icons p-1">save</span>
       </div>
     </div>
     <div id="roomvisualiser"></div>
     </div>
 
     <div id="zoomRange">
+      <span class="material-symbols-outlined">zoom_in</span>
       <input type="range" id="zoom" orient="vertical" (change)="changeStageScale();"  [(ngModel)]="zoomValue" value="{{zoomValue}}" min="0" max="10" step="0.5">
+      <span class="material-symbols-outlined">zoom_out</span>
     </div>
+
   </div>
 
 </div>
