Typo fixed: renamed Objeckt --> Object

--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -135,7 +135,7 @@
       &nbsp;&nbsp;&nbsp;
       <div class="">
         <div *ngFor="let el of roomElements">
-          <label>Objeckt:&nbsp;</label><label><strong>{{el.element}}&nbsp;</strong></label>
+          <label>Object:&nbsp;</label><label><strong>{{el.element}}&nbsp;</strong></label>
           <label>Typ:&nbsp;</label><label><strong>{{el.elementtyp}}&nbsp;</strong></label>
           <label>X:&nbsp;</label><label><strong>{{el.x}}&nbsp;</strong></label>
           <label>Y:&nbsp;</label><label><strong>{{el.y}}&nbsp;</strong></label>
