--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -4,7 +4,7 @@
       Bestätigung der Löschung
     </div>
     <div class="contentPopup">
-      Wollen Sie diesen Element endgültig löschen ?<br>
+      Wollen Sie dieses Element endgültig löschen ?<br>
       <br>
     </div>
     <div class="popUpActions">
@@ -89,7 +89,7 @@
 
   <div *ngIf="isToAddWindow" class="popupForm">
     <div class="headerPopup">
-      Neuer Fenster hinzufügen
+      Neues Fenster hinzufügen
     </div>
     <div class="contentPopup">
       <div class="right">
@@ -123,7 +123,7 @@
 
   <div *ngIf="isToSaveRoom" class="popupForm">
     <div class="headerPopup">
-      Hier sind Details ihres Raums
+      Hier sind Details Ihres Raums
     </div>
     <div class="contentPopup">
 
@@ -145,9 +145,9 @@
       </div>
     </div>
     <div class="moreinfosPopup">
-      Wenn Sie mit diesem Raum weitermachen wollen, clicken Sie auf Bestätigen.
+      Wenn Sie mit diesem Raum weitermachen wollen, klicken Sie auf Bestätigen.
       Damit werden Sie zum Hauptmenü geführt
-      und keine Änderungen auf dem Raum mehr zum Anspruch nehmen können.<br>
+      und es können keine Änderungen auf den Raum mehr in Anspruch genommen werden.<br>
     </div>
     <div class="popUpActions">
       <button (click)="isToSaveRoom = false">Abbrechen</button>
