--- a/src/app/room/room.component.css
+++ b/src/app/room/room.component.css
@@ -37,8 +37,8 @@
   position: relative;
   display: block;
   width:50px;
-  height:700px;
-  margin-top: 75px;
+  height:280px;
+  margin-top: 20px;
   margin-left: 20px;
   display: flex;
   flex-direction: column;
@@ -270,10 +270,31 @@ input[type=range][orient=vertical] {
 
 hr{
 
-  border:         none;
+  border: none;
   border-left:    1px solid hsla(200, 10%, 50%,100);
   height:         100px;
   width:          1px;
 }
+
+#colorPickerTrigger {
+  width:30px;
+  height:30px;
+  background-color: #11b0e7;
+  border-radius: 2px;
+  border: 1px solid #777;
+  margin-left: 13px;
+  margin-top: 80px;
+  cursor: pointer;
+}
+
+#colorPickerContainer {
+position: absolute;
+  z-index: 100;
+  width: 1300px;
+  height: 850px;
+  display: flex;
+  justify-content: center;
+}
+
 
 
