Raum Dev Version 1.6 (SM-186, SM-187) npm install ngx-color --save

--- a/src/app/room/room.component.css
+++ b/src/app/room/room.component.css
@@ -24,11 +24,15 @@
   justify-content: left;
 }
 
+#roomvisualiser {
+  /*border: 3px solid blue;*/
+}
+
 
 #visualiser {
   position: relative;
-  width: 702px;
-  height: 702px;
+  width: 700px;
+  height: 700px;
   margin-left: 40px;
   margin-top: 10px;
 }
