--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -48,7 +48,7 @@
     </div>
     <div class="popUpActions">
       <button (click)="isToAddDesk = false">Abbrechen</button>
-      <button (click)="addDesk(deskToAdd.elementtyp,deskToAdd.place,deskToAdd.x,deskToAdd.y,deskToAdd.degRotation); isToAddDesk = false">Hinzufügen</button>
+      <button (click)="addDesk(deskToAdd.elementtyp,deskToAdd.place,deskToAdd.x,deskToAdd.y,deskToAdd.degRotation,'#777777'); isToAddDesk = false">Hinzufügen</button>
     </div>
   </div>
 
@@ -82,7 +82,7 @@
     </div>
     <div class="popUpActions">
       <button (click)="isToAddDoor = false">Abbrechen</button>
-      <button (click)="addDoor(doorToAdd.elementtyp,doorToAdd.x,doorToAdd.y,doorToAdd.degRotation); isToAddDoor = false">Hinzufügen</button>
+      <button (click)="addDoor(doorToAdd.elementtyp,doorToAdd.x,doorToAdd.y,doorToAdd.degRotation, '#777777'); isToAddDoor = false">Hinzufügen</button>
     </div>
   </div>
 
@@ -116,7 +116,7 @@
     </div>
     <div class="popUpActions">
       <button (click)="isToAddWindow = false">Abbrechen</button>
-      <button (click)="addWindow(windowToAdd.elementtyp,windowToAdd.x,windowToAdd.y,windowToAdd.degRotation); isToAddWindow = false">Hinzufügen</button>
+      <button (click)="addWindow(windowToAdd.elementtyp,windowToAdd.x,windowToAdd.y,windowToAdd.degRotation, '#777777'); isToAddWindow = false">Hinzufügen</button>
     </div>
   </div>
 
