--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -10,7 +10,7 @@
       <button type="button" disabled class="material-icons md-48 btn btn-secondary mb-3 btn-lg btn-block" (click)="ImportBox()" title="Import">file_open</button>
     </div>
     <div class="btn-group">
-      <button type="button" routerLink="/generate" disabled class="w-100 btn btn-primary mb-3 btn-lg btn-block" >Sitzordnung erstellen</button>
+      <button type="button" (click)="toCreatRandomSeat()" [ngClass]="{'disabled':!this.isDataAndRoomExist()}"  class="w-100 btn btn-primary mb-3 btn-lg btn-block" >Sitzordnung erstellen</button>
     </div>
   </div>
 </div>
