--- a/src/app/mainmenu/mainmenu.component.html
+++ b/src/app/mainmenu/mainmenu.component.html
@@ -3,11 +3,12 @@
     <div class="btn-group">
       <button type="button" (click)="editOrCreatGroup()" class="w-75 btn mb-3 btn-lg btn-block" [ngClass]="{'btn-success':this.isDataExist(), 'btn-primary': !this.isDataExist()}">{{gruppeStatus}}</button>
       <button type="button" (click)="ImportBox()"  class="material-icons md-48 btn btn-secondary mb-3 btn-lg btn-block" [ngClass]="{'disabled':this.isDataExist()}" title="Import">file_open</button>
-      <button type="button" (click)="removeGruppe()" class="btn btn-danger bg-danger btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isDataExist()}" title="Delete">delete</button>
+      <button type="button" (click)="removeGruppe('grupp')" class="btn btn-danger bg-danger btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isDataExist()}" title="Delete">delete</button>
     </div>
     <div class="btn-group">
       <button type="button" id="roomBtn"  routerLink="/room" class="w-100 btn btn-primary mb-3 btn-lg btn-block" >{{raumStatus}}</button>
-      <button type="button" disabled class="material-icons md-48 btn btn-secondary mb-3 btn-lg btn-block" (click)="ImportBox()" title="Import">file_open</button>
+      <button type="button" class="material-icons md-48 btn btn-secondary mb-3 btn-lg btn-block" [ngClass]="{'disabled':this.isRoomAvailable()}"  title="Import">file_open</button>
+      <button type="button" (click)="removeGruppe('room')" class="btn btn-danger bg-danger btn-sm btn-block material-icons mb-3" [ngClass]="{'visually-hidden':!this.isRoomAvailable()}" title="Delete">delete</button>
     </div>
     <div class="btn-group">
       <button type="button" (click)="toCreatRandomSeat()" [ngClass]="{'disabled':!this.isDataAndRoomExist()}"  class="w-100 btn btn-primary mb-3 btn-lg btn-block" >Sitzordnung erstellen</button>
