--- a/src/app/room/room.component.css
+++ b/src/app/room/room.component.css
@@ -25,7 +25,10 @@
 }
 
 #roomvisualiser {
-  /*border: 3px solid blue;*/
+  background-color: #e2e2e2;
+  position: absolute;
+  border:  3px solid #e2e2e2;
+  border-radius: 6px;
 }
 
 
