SM-15/ SM-185 Neue Komponente für Personeneigenschaften

--- a/src/app/person-properties/person-properties.component.html
+++ b/src/app/person-properties/person-properties.component.html
@@ -1,61 +1,6 @@
-<div class="container text-center mt-4">
-  <label style="float: left;" >Klicken Sie auf die Zeilen, um die Eigenschaften zu zuweisen.</label>
-  <table class="table table-striped table-hover">
-    <thead  class="table-dark">
-    <tr>
-      <th>Nr</th>
-      <th>Vorname</th>
-      <th>Nachname</th>
-    </tr>
-    </thead>
-    <tbody>
-
-    <tr *ngFor="let group of listOfContacts;  let i = index" (click)="openModal(i+1, group.Vorname, group.Nachname)">
-
-      <td>
-        {{i+1}}
-      </td>
-
-      <td >
-        <input autocomplete="Firstname"  value="{{group.Vorname}}" style="  text-align:center; outline:none;width: 100%;height: 100%; border:none; background:none; cursor: pointer" readonly />
-      </td>
-
-      <td>
-        <input autocomplete="Lastname"value="{{group.Nachname}}" style="text-align:center; outline:none;width: 100%;height: 100%; border: none; background:none; cursor: pointer" readonly />
-        <svg  style="float: right; position: absolute; margin: 5px -29px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-          <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-          <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-        </svg>
-      </td>
-
-      <!--td *ngIf="this.TheStatus">
-        <svg (click)="delete(i)" style="cursor: pointer" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-          <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-        </svg>
-      </td-->
-    </tr>
-    </tbody>
-  </table>
-
-  <div class="btn-group mr-2" style="float: right">
-    <button  type="button" class="btn btn-outline-dark"  (click)="saveList()"  >Bestätigen</button>
-  </div>
-  <div class="btn-group mr-2"  >
-    <button  type="button" class="btn btn-outline-dark" (click)="exportDialogBox()" >Exportieren</button>
-  </div>
-  <div class="btn-group mr-2"style="float: left">
-    <button  type="button" class="btn btn-outline-dark "  (click)="toEdit()">Zurück</button>
-  </div>
-</div>
-
-
-<app-person-properties [index]="index" [firstName]="firstName" [lastName]="lastName" [neighborList]="neighborList" [listOfContacts]="listOfContacts"></app-person-properties>
-
-
 
 <!-- Modal -->
-<!--div-- class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -132,7 +77,4 @@
       </div>
     </div>
   </div>
-</div-->
-
-
-<app-export-csv></app-export-csv>
+</div>
