--- a/src/app/import-csv/import-csv.component.html
+++ b/src/app/import-csv/import-csv.component.html
@@ -8,15 +8,14 @@
     </div>
       <div class="modal-body "style="width: 100%;">
         <span class="material-icons md-48">file_open</span>
-        <input type="file" #csvReader name="Upload CSV" id="txtFileUpload" accept=".csv" (change)="uploadListener($event)" class="form-control form-control-lg btn-file" style="width: 80%; left:22px"/>
-        <small id="FileTypHelp" class="form-text text-muted" style="margin-left: 70px">eine gültige CSV Datei Auswählen</small> <br>
+        <input type="file" #csvReader name="Upload CSV" id="txtFileUpload" (change)="uploadListener($event)" accept=".csv"  class="form-control form-control-lg btn-file" style="width: 80%; left:22px"/>
+        <small id="FileTypHelp" class="form-text text-danger" style="margin-left: 70px">{{messageIfNoFile}}</small> <br>
         <span class="material-icons md-48 mt-2">lock</span>
 
         <mat-form-field appearance="outline" style="width: 80%; left: 20px"  class="mr-2">
           <mat-label>Passwort</mat-label>
 
           <input #myInput matInput
-                 #passwordWithValidation
                  placeholder="passwort eingeben"
                  [type]="hide ? 'password': 'text'"
                  required
@@ -32,8 +31,8 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal"  (click)="closeModal()">Schlißen</button>
-        <button type="button" class="btn btn-outline-dark" (click)="test()">Beschtätigen und Importieren</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"    (click)="closeModal()">Schlißen</button>
+        <input type="button" class="btn btn-outline-dark"  (click)="test()" value="Beschtätigen und Importieren">
       </div>
     </div>
   </div>
