Export room and update from error message from import group

--- a/src/app/export-csv/export-csv.component.html
+++ b/src/app/export-csv/export-csv.component.html
@@ -78,7 +78,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Schlißen</button>
-        <button type="button" class="btn btn-outline-dark" (click)="ExportCSV()">Speichern und als CSV herunterladen</button>
+        <button type="button" class="btn btn-outline-dark" (click)="ExportGroupCSV()">Speichern und als CSV herunterladen</button>
       </div>
     </div>
   </div>
