--- a/src/app/import-csv/import-csv.component.html
+++ b/src/app/import-csv/import-csv.component.html
@@ -33,7 +33,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal"    (click)="closeModal()">Schlißen</button>
-        <input type="button" class="btn btn-outline-dark"(click)="test()" value="Beschtätigen und Importieren">
+        <input type="button" class="btn btn-outline-dark"(click)="Import()" value="Beschtätigen und Importieren">
       </div>
     </div>
   </div>
