--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -313,6 +313,7 @@
         <span (click)="downloadAsImage()" class="material-icons p-1">image</span>
         <span (click)="savePdf()" class="material-icons p-1">picture_as_pdf</span>
         <span (click)="isToSaveRoom = true; makeRoomDetailsReady();" class="material-icons p-1">save</span>
+        <mat-icon title="Download as CSV File" (click)="ExportAsCsv()">download</mat-icon>
       </div>
     </div>
 
