--- a/src/app/room/room.component.css
+++ b/src/app/room/room.component.css
@@ -1,7 +1,7 @@
 #container {
   position: absolute;
   width: 1300px;
-  height: 850px;
+  height: 1100px;
   background-color: rgb(248,249,250);
   margin-top: 20px;
   border-radius: 4px;
@@ -10,7 +10,7 @@
 #toolbar {
   position: relative;
   width: 416px;
-  height: 850px;
+  height: auto;
   background-color: rgb(248,249,250);
   float: left;
   border-radius: 10px 0px 0px 10px;
@@ -81,7 +81,7 @@ input[type=number],select {
   font-size: 1.1em;
   width: 70px;
   height: 35px;
-  background-color: rgb(248,249,250);
+  background-color: #f8f9fa;
   border: 1px solid #ddd;
 }
 
@@ -97,12 +97,13 @@ input[type=number]::-webkit-outer-spin-button {
 
 .horizontal-left-side-element {
   display: flex;
-  justify-items: left;
-  gap:12px;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 2px;
 }
 
 .left-container-child {
-  padding: 20px 20px 20px 20px;
+  padding: 10px 10px 10px 10px;
   border-bottom: 1px solid #ddd;
   overflow-y: scroll;
   max-height: 230px;
@@ -301,5 +302,29 @@ position: absolute;
   justify-content: center;
 }
 
+.blink {
+  animation: blinker 2s linear infinite;
+}
 
+@keyframes blinker {
+  50% {
+    background-color: #f8f9fa;
+  }
+}
 
+.objToolbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f8f9fa;
+  height:35px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 2px;
+  border: 1px solid #ddd;
+}
+
+.icons {
+  height: 26px;
+  fill: #777;
+}
